[gd_scene load_steps=5 format=3 uid="uid://ctask_panel"]

[ext_resource type="Script" path="res://scenes/task_panel.gd" id="1_task_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_task_panel"]
bg_color = Color(0.1, 0.12, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.8, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.2, 0.8, 0.2, 0.3)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_bg"]
bg_color = Color(0.05, 0.08, 0.05, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.8, 0.2, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill"]
bg_color = Color(0.2, 0.8, 0.2, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.8, 0.2, 1)

[node name="TaskPanel" type="PanelContainer"]
custom_minimum_size = Vector2(0, 500)
theme_override_styles/panel = SubResource("StyleBoxFlat_task_panel")
script = ExtResource("1_task_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Container" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="JobContainer" type="HBoxContainer" parent="MarginContainer/Container"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="JobTitleLabel" type="Label" parent="MarginContainer/Container/JobContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
text = "Job Title: Junior Developer"

[node name="SalaryLabel" type="Label" parent="MarginContainer/Container/JobContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
text = "Salary: ¬£100"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Container"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Container"]
custom_minimum_size = Vector2(0, 40)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 2

[node name="TaskInfo" type="VBoxContainer" parent="MarginContainer/Container/HBoxContainer"]
layout_mode = 2

[node name="TaskLabel" type="Label" parent="MarginContainer/Container/HBoxContainer/TaskInfo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 60)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "TASK: Fix CEO's PowerPoint"
autowrap_mode = 3

[node name="ComplexityLabel" type="Label" parent="MarginContainer/Container/HBoxContainer/TaskInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
text = "Complexity: üçù"

[node name="DeadlineLabel" type="Label" parent="MarginContainer/Container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
text = "Due in 5 days"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_progress_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill")
show_percentage = false
